# quick-xml-bugs

./: Cargo.toml
src/: main.rs
