[package]
name = "quick_xml_bugs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
quick-xml = { git = "https://github.com/tafia/quick-xml.git", branch = "issue-299", features = [ "encoding", "serialize" ] }